nlamah/src/main/resources/org/nlamah/QL/test/error/undeclaredQuestion.ql
form test
{
	if (question1)
	{
	}
	endif
	
	question3 number "test" = question2
}